# django_celery

./: .env.example  .gitignore  ASYNC_IMPLEMENTATION_COMPLETE.md  ASYNC_IMPLEMENTATION_SUMMARY.md  ASYNC_README.md  CACHE_BACKEND_SWITCH.md  CACHE_CHANGES_MANIFEST.md  CACHE_COMPLETION_REPORT.md  CACHE_DOCS_INDEX.md  CACHE_SERVICE_REVIEW.md  CACHE_SERVICE_SUMMARY.md  CACHE_SUMMARY.txt  CACHE_UPDATE_LOG.md  CHANGELOG.md  CHECKLIST_VALIDACION.md  CORRECCIONES_APLICADAS.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FILES_GENERATED.md  HISTORY_ISSUES.md  IMPLEMENTATION_CHECKLIST.md  INDICE_ASYNC_ARREGLADO.md  LEEME_PRIMERO.md  MAPA_NAVEGACION.md  PROJECT_PLAN.md  PROYECTO_COMPLETADO.md  QUICK_START_ASYNC.md  QUICK_START_ASYNC_FIXED.md  QUICK_START_CACHE.md  README.md  README_CACHE_SERVICE.txt  RESUMEN_CORRECCIONES.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_base.txt  stress_results_async_20260130_172512.json  stress_results_async_20260206_151158.json
docs/: INDEX.md
docs/architecture/: CACHING_STRATEGY.md  CHANGELOG.md  CHECKLIST_VALIDACION.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  SERVICE_COMPARISON.md
docs/cache/: CACHE_BACKEND_SWITCH.md  CACHE_CHANGES_MANIFEST.md  CACHE_COMPLETION_REPORT.md  CACHE_DOCS_INDEX.md  CACHE_README.md  CACHE_SERVICE_REVIEW.md  CACHE_SERVICE_SUMMARY.md  CACHE_TEST_COMPLETION.md  CACHE_UPDATE_LOG.md  INDEX.md  TEST_RESULTS.md
docs/migo-service/: ASYNC_GUIDE.md  INDEX.md  TEST_RESULTS.md
docs/others/: CORRECCIONES_APLICADAS.md  FILES_GENERATED.md  HISTORY_ISSUES.md  INDICE_ASYNC_ARREGLADO.md  LEEME_PRIMERO.md  PROYECTO_COMPLETADO.md  QUICK_START_CACHE.md
myproject/: ASYNC_IMPLEMENTATION_SUMMARY.md  CACHE_TEST_COMPLETION.md  DELIVERABLES.md  MIGO_TESTS_GUIDE.md  MIGO_TESTS_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_MIGO_TESTS.md  TEST_MIGO_SERVICE_REPORT.md  celerybeat-schedule.dir  check_structure.py  conftest.py  create_templates.py  debug_run_masivo.py  ejemplo_async.py  fix_settings.py  fix_templates_issues.py  test_api_fallos.py  test_api_migo.py  test_api_uso_real.py  test_async_quick.py  test_cache_diagnostico.py  test_debug_loggin.py  test_factura_completo.py  test_flujo_facturacion.py  test_flujo_facturacion_v2.py  test_import_fix.py  test_invoice_service.py  test_minimal_nubefact.py  test_nubefact.py  test_results.txt  test_results_v2_20260128_155201.json  test_simple_pdf.py  test_sinc_invoice_pdf.py  test_sinc_invoice_pdf_qr.py  test_sinc_invoice_pdf_qr2.py  test_sinc_invoice_pdf_qr3.py  test_stress_async.py  test_weasyprint.py  verify_async_implementation.py
myproject/api_service/: admin.py  exceptions.py  models.py  pipeline.py  services.py  tasks.py  urls.py  views.py  views_async.py
myproject/billing/: admin.py  models.py  services.py  urls.py
myproject/core/: admin.py  models.py  tasks.py  urls.py  views.py
myproject/flow_invoice_pdf_qr/: run_all.py  shared.py  step1_send_only.py  step2_generate_pdf.py  (+1 more)
(+230 files in other folders)
