# pyproject.toml
[project]
name = "django_fx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.7",
    "django-celery-beat>=2.8.1",
    "django-extensions>=4.1",
    "django-formtools>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "redis>=7.0.1",
    "xlrd>=2.0.2",
    "requests>=2.27",
    "openpyxl>=3.0",
    "numpy>=2.4.0",
    "black>=25.12.0",
    "pymemcache>=4.0.0",
    "pytest>=9.0.2",
    "httpx>=0.27.0",
    "asyncio>=4.0.0",
    "aiohttp>=3.13.3",
]

