[project]
name = "django_fx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.7",
    "django-celery-beat>=2.8.1",
    "django-extensions>=4.1",
    "django-formtools>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "redis>=7.0.1",
    "xlrd>=2.0.2",
    "requests>=2.27",
    "numpy>=2.4.0",
    "black>=25.12.0",
    "pymemcache>=4.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.13.3",
    "weasyprint>=68.0",
    "qrcode>=8.2",
    "django-weasyprint>=2.4.0",
]

# ✅ CONFIGURACIÓN DE PYTEST (usando ini_options)
[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
django_find_project = true
pythonpath = ["."]

# ✅ Configuración para BD de prueba
addopts = [
    "--reuse-db",  # Reutiliza la BD de prueba en lugar de recrearla
    "--create-db", # Crea la BD si no existe
]

testpaths = [
    "api_service/tests",
    "billing/tests",
]

# ✅ Excluir scripts que no son tests de pytest
norecursedirs = [
    "*.egg-info",
    "dist",
    "build",
    "docs",
    "venv",
    ".venv",
    "__pycache__",
    "test_*.py",  # Excluye archivos test_*.py en la raíz
]
python_files = [
    "test_*.py",
    "*_tests.py",
]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*", "*_test"]

markers = [
    "django_db: Tests que usan base de datos",
    "asyncio: Tests asíncronos",
    "slow: Tests lentos",
    "integration: Tests de integración",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ✅ Configuración de logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"